add index js dashboard input

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             </div>
         </div>
     </div>
-    <script type="module" src="dashboard.js"></script>
+    <script type="module" src="index.js"></script>
     <script type="module" src="adminform_map.js"></script>
     <script type="module" src="submitform.js"></script>
 </body>
