fix: locate image source to correct directory

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tambah Data | Parkir Gratis</title>
     <link href="https://cdn.skypack.dev/ol/ol.css" rel="stylesheet">
-    <link rel="icon" href="../../img/logo.png" type="image/x-icon">
+    <link rel="icon" href="assets/img/logo.png" type="image/x-icon">
     
       <style>
 
@@ -22,7 +22,7 @@
             <div :class="sidebarOpen ? 'translate-x-0 ease-out' : '-translate-x-full ease-in'" class="fixed inset-y-0 left-0 z-30 w-64 overflow-y-auto transition duration-300 transform bg-gray-900 lg:translate-x-0 lg:static lg:inset-0">
                 <div class="flex items-center justify-center mt-8">
                     <div class="flex items-center">
-                        <img src="../assets/img/logo.png" class="w-10 h-10" alt="">
+                        <img src="assets/img/logo.png" class="w-10 h-10" alt="">
                         <span class="mx-2 text-2xl font-semibold text-white">Dashboard</span>
                     </div>
                 </div>
@@ -244,8 +244,8 @@
             </div>
         </div>
     </div>
-    <script type ="module" src="index.js"></script>
+    <!-- <script type ="module" src="index.js"></script>
     <script type="module" src="adminform_map.js"></script>
-    <script type="module" src="submitform.js"></script>
+    <script type="module" src="submitform.js"></script> -->
 </body>
 </html>
