add logic logout js

--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
         </div>
     </div>
     <!-- <script type ="module" src="index.js"></script> -->
-    <script type="module" src="adminform_map.js"></script>
-    <script type="module" src="submitform.js"></script>
+    <script type="module" src="./assets/js/adminform_map.js"></script>
+    <script type="module" src="./assets/js/index.js"></script>
+    <script type="module" src="./assets/js/submitform.js"></script>
 </body>
 </html>
