--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tambah Data | Parkir Gratis</title>
     <link href="https://cdn.skypack.dev/ol/ol.css" rel="stylesheet">
     <link rel="icon" href="assets/img/logo.png" type="image/x-icon">
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"></script>
       <style>
 
         
