add sweetalert js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.skypack.dev/ol/ol.css" rel="stylesheet">
     <link rel="icon" href="assets/img/logo.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <style>
 
         
@@ -152,5 +153,6 @@
     <script type="module" src="./assets/js/adminform_map.js"></script>
     <script type="module" src="./assets/js/index.js"></script>
     <script type="module" src="./assets/js/submitform.js"></script>
+    <script type="module" src="./assets/js/logout.js"></script>
 </body>
 </html>
