Add park location form with map and data submission functionality

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="flex flex-col mt-3">
                             <div class="py-2 -my-2 overflow-x-auto sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8">
                                 <div class="inline-block min-w-full overflow-hidden align-middle border-b border-gray-200 sm:rounded-lg">
-                                    <form class="px-2 pt-6 pb-8 mb-4 md:pr-22 flex flex-col gap-y-3" id="gameForm">
+                                    <form class="px-2 pt-6 pb-8 mb-4 md:pr-22 flex flex-col gap-y-3" id="locationForm">
                                         <div class="md:flex xs:flex-col gap-4">
                                             <div class="mb-2 flex-grow">
                                                 <label for="long" class="block text-sm font-medium text-gray-700">Longitude</label>
@@ -133,8 +133,8 @@
     </div>
     <!-- <script type ="module" src="index.js"></script> -->
     <script type="module" src="./assets/js/adminform_map.js"></script>
-    <script type="module" src="./assets/js/index.js"></script>
     <script type="module" src="./assets/js/submitform.js"></script>
+    <script type="module" src="./assets/js/index.js"></script>
     <script type="module" src="./assets/js/logout.js"></script>
 </body>
 </html>
