--- a/index.html
+++ b/index.html
@@ -111,12 +111,35 @@
                                                 <input disabled required type="text" id="lat" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold" placeholder="Latitude akan terisi otomatis">
                                             </div>
                                         </div>
+                                        <div class="md:flex xs:flex-col gap-4">
+                                            <div class="mb-2 flex-grow">
+                                                <label for="province" class="block text-sm font-medium text-gray-700">Province</label>
+                                                <input type="text" id="province" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                            </div>
+                                            <div class="mb-2 flex-grow">
+                                                <label for="district" class="block text-sm font-medium text-gray-700">District</label>
+                                                <input type="text" id="district" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                            </div>
+                                        </div>
+                                        <div class="md:flex xs:flex-col gap-4">
+                                            <div class="mb-2 flex-grow">
+                                                <label for="sub_district" class="block text-sm font-medium text-gray-700">Sub-District</label>
+                                                <input type="text" id="sub_district" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                            </div>
+                                            <div class="mb-2 flex-grow">
+                                                <label for="village" class="block text-sm font-medium text-gray-700">Village</label>
+                                                <input type="text" id="village" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                            </div>
+                                        </div>
                                         <div class="mt-4 p-2 border-2 border-violet-500 rounded-md shadow-lg">
                                             <div id="map" class="w-full h-64"></div>
                                         </div>                            
                                         <div class="flex items-center justify-end gap-3">
                                             <button id="submitButton" class="bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
-                                                Save
+                                                Save Gis
+                                            </button>
+                                            <button id="saveButton" class="bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+                                                Save Parkir
                                             </button>
                                             <button id="cancelButton" class="bg-rose-500 hover:bg-rose-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
                                                 Cancel
@@ -134,7 +157,7 @@
     <!-- <script type ="module" src="index.js"></script> -->
     <script type="module" src="./assets/js/adminform_map.js"></script>
     <script type="module" src="./assets/js/submitform.js"></script>
-    <script type="module" src="./assets/js/index.js"></script>
-    <script type="module" src="./assets/js/logout.js"></script>
+    < type="module" src="./assets/js/index.js"></script>
+    < type="module" src="./assets/js/logout.js"></script>
 </body>
 </html>
