--- a/index.html
+++ b/index.html
@@ -113,22 +113,38 @@
                                         </div>
                                         <div class="md:flex xs:flex-col gap-4">
                                             <div class="mb-2 flex-grow">
-                                                <label for="province" class="block text-sm font-medium text-gray-700">Province</label>
+                                                <label for="province" class="block text-sm font-medium text-gray-700">Provinsi</label>
                                                 <input type="text" id="province" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
                                             </div>
                                             <div class="mb-2 flex-grow">
-                                                <label for="district" class="block text-sm font-medium text-gray-700">District</label>
+                                                <label for="district" class="block text-sm font-medium text-gray-700">Daerah</label>
                                                 <input type="text" id="district" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
                                             </div>
                                         </div>
                                         <div class="md:flex xs:flex-col gap-4">
                                             <div class="mb-2 flex-grow">
-                                                <label for="sub_district" class="block text-sm font-medium text-gray-700">Sub-District</label>
+                                                <label for="sub_district" class="block text-sm font-medium text-gray-700">Kecamatan</label>
                                                 <input type="text" id="sub_district" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
                                             </div>
                                             <div class="mb-2 flex-grow">
-                                                <label for="village" class="block text-sm font-medium text-gray-700">Village</label>
+                                                <label for="village" class="block text-sm font-medium text-gray-700">Desa</label>
                                                 <input type="text" id="village" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                            </div>
+                                        </div>
+                                        <div class="md:flex xs:flex-col gap-4">
+                                            <div class="mb-2 flex-grow">
+                                                <label for="nama_tempat" class="block text-sm font-medium text-gray-700">Nama-Tempat</label>
+                                                <input type="text" id="nama_tempat" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                            </div>
+                                            <div class="mb-2 flex-grow">
+                                                <label for="lokasi" class="block text-sm font-medium text-gray-700">Lokasi</label>
+                                                <input type="text" id="lokasir" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                            </div>
+                                        </div>
+                                        <div class="md:flex xs:flex-col gap-4">
+                                            <div class="mb-2 flex-grow">
+                                                <label for="gambar" class="block text-sm font-medium text-gray-700">Gambar</label>
+                                                <input type="file" id="gambar" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
                                             </div>
                                         </div>
                                         <div class="mt-4 p-2 border-2 border-violet-500 rounded-md shadow-lg">
@@ -157,7 +173,7 @@
     <!-- <script type ="module" src="index.js"></script> -->
     <script type="module" src="./assets/js/adminform_map.js"></script>
     <script type="module" src="./assets/js/submitform.js"></script>
-    <script type="module" src="./assets/js/index.js"></script>
+    < type="module" src="./assets/js/index.js"></script>
     <script type="module" src="./assets/js/logout.js"></script>
 </body>
 </html>
