add new form fasilitas

--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@
                                                 <label for="gambar" class="block text-sm font-medium text-gray-700">Gambar</label>
                                                 <input type="file" id="gambar" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
                                             </div>
+                                            <div class="mb-2 flex-grow">
+                                                <label for="fasilitas" class="block text-sm font-medium text-gray-700">Fasilitas</label>
+                                                <input type="text" id="fasilitas" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                            </div>
                                         </div>
                                         <div class="mt-4 p-2 border-2 border-violet-500 rounded-md shadow-lg">
                                             <div id="map" class="w-full h-64"></div>
