--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
                                         <div class="md:flex xs:flex-col gap-4">
                                             <div class="mb-2 flex-grow">
                                                 <label for="long" class="block text-sm font-medium text-gray-700">Longitude</label>
-                                                <input disabled required type="text" id="long" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold" placeholder="Longitude akan terisi otomatis">
+                                                <input disabled required type="text" id="long" class="mt-1 block bg-gray-500 w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold" placeholder="Longitude akan terisi otomatis">
                                             </div>
                                             <div class="mb-2 flex-grow">
                                                 <label for="lat" class="block text-sm font-medium text-gray-700">Latitude</label>
-                                                <input disabled required type="text" id="lat" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold" placeholder="Latitude akan terisi otomatis">
+                                                <input disabled required type="text" id="lat" class="mt-1 block bg-gray-500 w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold" placeholder="Latitude akan terisi otomatis">
                                             </div>
                                         </div>
                                         <div class="md:flex xs:flex-col gap-4">
@@ -142,15 +142,15 @@
                                             </div>
                                         </div>
                                         <div class="md:flex xs:flex-col gap-4">
-                                            <div class="mb-2 flex-grow">
+                                            <div class="mb-2 md:w-1/2 xs:flex-grow">
                                                 <label for="gambar" class="block text-sm font-medium text-gray-700">Gambar</label>
-                                                <input type="file" id="gambar" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                                <input type="file" id="gambar" class="mt-1 block w-full h-10 px-3 py-2 border bg-white border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
                                             </div>
-                                            <div class="mb-2 flex-grow">
+                                            <div class="mb-2 md:w-1/2 xs:flex-grow">
                                                 <label for="fasilitas" class="block text-sm font-medium text-gray-700">Fasilitas</label>
-                                                <input type="text" id="fasilitas" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                                <input type="text" id="fasilitas" class="mt-1 block w-full h-10 px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
                                             </div>
-                                        </div>
+                                        </div>                                        
                                         <div class="mt-4 p-2 border-2 border-violet-500 rounded-md shadow-lg">
                                             <div id="map" class="w-full h-64"></div>
                                         </div>                            
