disable input form provinsi,kecamatan,desa, daerah

--- a/index.html
+++ b/index.html
@@ -104,31 +104,31 @@
                                         <div class="md:flex xs:flex-col gap-4">
                                             <div class="mb-2 flex-grow">
                                                 <label for="long" class="block text-sm font-medium text-gray-700">Longitude</label>
-                                                <input disabled required type="text" id="long" class="mt-1 block bg-gray-500 w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold" placeholder="Longitude akan terisi otomatis">
+                                                <input disabled required type="text" id="long" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold" placeholder="Longitude akan terisi otomatis">
                                             </div>
                                             <div class="mb-2 flex-grow">
                                                 <label for="lat" class="block text-sm font-medium text-gray-700">Latitude</label>
-                                                <input disabled required type="text" id="lat" class="mt-1 block bg-gray-500 w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold" placeholder="Latitude akan terisi otomatis">
+                                                <input disabled required type="text" id="lat" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold" placeholder="Latitude akan terisi otomatis">
                                             </div>
                                         </div>
                                         <div class="md:flex xs:flex-col gap-4">
                                             <div class="mb-2 flex-grow">
                                                 <label for="province" class="block text-sm font-medium text-gray-700">Provinsi</label>
-                                                <input type="text" id="province" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                                <input disabled required type="text" id="province" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold" placeholder="Provinsi akan terisi otomatis">
                                             </div>
                                             <div class="mb-2 flex-grow">
                                                 <label for="district" class="block text-sm font-medium text-gray-700">Daerah</label>
-                                                <input type="text" id="district" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                                <input disabled required type="text" id="district" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold" placeholder="Daerah akan terisi otomatis">
                                             </div>
                                         </div>
                                         <div class="md:flex xs:flex-col gap-4">
                                             <div class="mb-2 flex-grow">
                                                 <label for="sub_district" class="block text-sm font-medium text-gray-700">Kecamatan</label>
-                                                <input type="text" id="sub_district" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                                <input disabled required type="text" id="sub_district" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold" placeholder="Kecamatan akan terisi otomatis">
                                             </div>
                                             <div class="mb-2 flex-grow">
                                                 <label for="village" class="block text-sm font-medium text-gray-700">Desa</label>
-                                                <input type="text" id="village" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                                <input disabled required type="text" id="village" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold" placeholder="Desa akan terisi otomatis">
                                             </div>
                                         </div>
                                         <div class="md:flex xs:flex-col gap-4">
@@ -177,7 +177,7 @@
     <!-- <script type ="module" src="index.js"></script> -->
     <script type="module" src="./assets/js/adminform_map.js"></script>
     <script type="module" src="./assets/js/submitform.js"></script>
-    < type="module" src="./assets/js/index.js"></script>
+    <script type="module" src="./assets/js/index.js"></script>
     <script type="module" src="./assets/js/logout.js"></script>
 </body>
 </html>
