--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                             </div>
                                             <div class="mb-2 flex-grow">
                                                 <label for="lokasi" class="block text-sm font-medium text-gray-700">Lokasi</label>
-                                                <input type="text" id="lokasir" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                                <input type="text" id="lokasi" class="mt-1 block bg-white w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
                                             </div>
                                         </div>
                                         <div class="md:flex xs:flex-col gap-4">
