Adjust hover styling on links

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <span class="mx-3">Add Data Parkir</span>
                     </a>
 
-                    <a class="flex items-center px-6 py-2 mt-4 text-gray-100 bg-gray-700 bg-opacity-25" href="submit_warung.html">
+                    <a class="flex items-center px-6 py-2 mt-4 text-gray-500 hover:bg-gray-700 hover:bg-opacity-25 hover:text-gray-100" href="submit_warung.html">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -187,8 +187,6 @@
     </div>
     <!-- <script type ="module" src="index.js"></script> -->
     <script type="module" src="./assets/js/adminform_map.js"></script>
-    <script type="module" src="./assets/js/submitform.js"></script>
-    <script type="module" src="./assets/js/index.js"></script>
-    <script type="module" src="./assets/js/logout.js"></script>
+    <script type="module" src="./assets/js/submitform.js"></script>>
 </body>
 </html>
