--- a/submit_warung.html
+++ b/submit_warung.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
 
-                    <a class="flex items-center px-6 py-2 mt-4 text-gray-100 bg-gray-700">
+                    <a class="flex items-center px-6 py-2 mt-4 text-gray-500 hover:bg-gray-700 hover:bg-opacity-25 hover:text-gray-100">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
