--- a/index.html
+++ b/index.html
@@ -188,5 +188,7 @@
     <!-- <script type ="module" src="index.js"></script> -->
     <script type="module" src="./assets/js/adminform_map.js"></script>
     <script type="module" src="./assets/js/submitform.js"></script>>
+    <script type="module" src="./assets/js/index.js"></script>
+    <script type="module" src="./assets/js/logout.js"></script>
 </body>
 </html>
