Add GIS data handling and warung region submission features

--- a/submit_warung.html
+++ b/submit_warung.html
@@ -39,7 +39,7 @@
                         <span class="mx-3">Add Data Parkir</span>
                     </a>
 
-                    <a class="flex items-center px-6 py-2 mt-4 text-gray-100 bg-gray-700 bg-opacity-25">
+                    <a class="flex items-center px-6 py-2 mt-4 text-gray-100 bg-gray-700 bg-opacity-25" href="index.html">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -107,7 +107,7 @@
                 </header>
                 <main class="flex-1 overflow-x-hidden overflow-y-auto bg-gray-200">
                     <div class="container px-6 py-8 mx-auto">
-                        <h3 class="text-3xl font-medium text-gray-700">Add Park Location</h3>    
+                        <h3 class="text-3xl font-medium text-gray-700">Add Warung Location</h3>    
                         <div class="flex flex-col mt-3">
                             <div class="py-2 -my-2 overflow-x-auto sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8">
                                 <div class="inline-block min-w-full overflow-hidden align-middle border-b border-gray-200 sm:rounded-lg">
@@ -158,8 +158,8 @@
                                                 <input type="file" id="gambar" class="mt-1 block w-full h-10 px-3 py-2 border bg-white border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold" name="gambar" accept="image/*" required>
                                             </div>
                                             <div class="mb-2 md:w-1/2 xs:flex-grow">
-                                                <label for="fasilitas" class="block text-sm font-medium text-gray-700">Fasilitas</label>
-                                                <input type="text" id="fasilitas" class="mt-1 block w-full h-10 px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
+                                                <label for="metode_pembayaran" class="block text-sm font-medium text-gray-700">Fasilitas</label>
+                                                <input type="text" id="metode_pembayaran" class="mt-1 block w-full h-10 px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 sm:text-sm focus:font-semibold">
                                             </div>
                                         </div>                                        
                                         <div class="mt-4 p-2 border-2 border-violet-500 rounded-md shadow-lg">
@@ -170,7 +170,7 @@
                                                 Save Gis
                                             </button>
                                             <button id="saveButton" class="bg-sky-500 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
-                                                Save Parkir
+                                                Save Warung
                                             </button>
                                             <button id="cancelButton" class="bg-rose-500 hover:bg-rose-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
                                                 Cancel
@@ -187,7 +187,6 @@
     </div>
     <!-- <script type ="module" src="index.js"></script> -->
     <script type="module" src="./assets/js/adminform_map.js"></script>
-    <script type="module" src="./assets/js/submitform.js"></script>>
     <script type="module" src="./assets/js/index.js"></script>
     <script type="module" src="./assets/js/logout.js"></script>
 </body>
